Fix bug calories and steps